src/objects/Super_Ball_Nodo__c.object
<CustomObject>
    <fields>
        <fullName>Descripci_n__c</fullName>
        <label>Descripción</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nodo_Padre__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nodo Padre</label>
        <referenceTo>Super_Ball_Nodo__c</referenceTo>
        <relationshipLabel>Super Ball - Nodos</relationshipLabel>
        <relationshipName>Super_Ball_Nodos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Posicion__c</fullName>
        <label>Posicion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Super_Ball_Arbol__c</fullName>
        <label>Super Ball - Arbol</label>
        <referenceTo>Super_Ball_Arbol__c</referenceTo>
        <relationshipLabel>Super Ball - Nodos</relationshipLabel>
        <relationshipName>Super_Ball_Nodos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Super Ball - Nodo</label>
    <nameField>
        <label>Nombre de Super Ball - Nodo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Super Ball - Nodos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>